--- a/package.json
+++ b/package.json
@@ -10,5 +10,9 @@
   "description": "",
   "dependencies": {
     "commander": "^12.1.0"
-  }
+  },
+  "bin": {
+    "github-user-activity": "./index.js"
+  },
+  "type": "module"
 }
